--- a/home.html
+++ b/home.html
@@ -115,10 +115,10 @@
 	
 	<div class="container">
 		<div class="centered-text">
-		  <a href="/projects.html"><h1>Projects</h1></a>
-			<a href="/about.html"><h1>About</h1></a>
-			<a href="/contact.html"><h1>Contact</h1></a>
-			<a href="/football.html"><h1>Football</h1></a>
+		  <a href="/projects"><h1>Projects</h1></a>
+			<a href="/about"><h1>About</h1></a>
+			<a href="/contact"><h1>Contact</h1></a>
+			<a href="/football"><h1>Football</h1></a>
 	  </div>
 	</div>
 	
