--- a/internationalstadiums.html
+++ b/internationalstadiums.html
@@ -160,7 +160,7 @@
 <body>
 	
 	
-	<a class="back-button" href="/football.html"><h2>Back</h2></a>
+	<a class="back-button" href="/football"><h2>Back</h2></a>
 	
 	
 	<div class="container">
