--- a/orbitproperty.html
+++ b/orbitproperty.html
@@ -128,7 +128,7 @@
 <body>
 	
 	
-	<a class="back-button" href="/projects.html"><h2>Back</h2></a>
+	<a class="back-button" href="/projects"><h2>Back</h2></a>
 	
 	
 	<div class="container">
