--- a/otherprojects.html
+++ b/otherprojects.html
@@ -103,7 +103,7 @@
 		<div class="centered-text">
 
 			
-			<a href="/posters.html">
+			<a href="/posters">
 				<p>Project 1</p>
 				<h1>Posters</h1>
 		  	</a>
@@ -115,21 +115,12 @@
 		  	</a>
 			<br>
 			
-		  	<a href="/afcstaustell.html">
+		  	<a href="/afcstaustell">
 				<p>Project 3</p>
 				<h1>AFC St. Austell</h1>
 		  	</a>
 			<br>
-
-
-			<a href="/eogroup.html">
-				<p>Project 4</p>
-				<h1>EO Group</h1>
-		  	</a>
-			<br>
-
-			
-			
+	
 	  	</div>
 	</div>
 </body>
