--- a/otherprojects.html
+++ b/otherprojects.html
@@ -98,7 +98,7 @@
 </head>
 	
 <body>
-	<a class="back-button" href="/projects.html"><h2>Back</h2></a>
+	<a class="back-button" href="/projects"><h2>Back</h2></a>
 	<div class="container">
 		<div class="centered-text">
 
@@ -109,7 +109,7 @@
 		  	</a>
 			<br>
 
-			<a href="/47.html">
+			<a href="/47">
 				<p>Project 2</p>
 				<h1>'47 Brand</h1>
 		  	</a>
