--- a/projects.html
+++ b/projects.html
@@ -99,18 +99,18 @@
 </head>
 	
 <body>
-	<a class="back-button" href="/home.html"><h2>Back</h2></a>
+	<a class="back-button" href="/home"><h2>Back</h2></a>
 	<div class="container">
 		<div class="centered-text">
 		  	
-			<a href="/thetoastclub.html">
+			<a href="/thetoastclub">
 				<p>Project 1</p>
 				<h1>The Toast Club</h1>
 		  	</a>
 			
 			<br>
 
-			<a href="/sportcheck.html">
+			<a href="/sportcheck">
 				<p>Project 2</p>
 				<h1>Sport Check</h1>
 		  	</a>
@@ -118,14 +118,14 @@
 			
 			<br>
 			
-			<a href="/watfordfc.html">
+			<a href="/watfordfc">
 				<p>Project 3</p>
 				<h1>Watford FC</h1>
 		  	</a>
 			
 			<br>
 			
-			<a href="/orbitproperty.html">
+			<a href="/orbitproperty">
 				<p>Project 4</p>
 				<h1>Orbit Property</h1>
 			</a>
