--- a/watfordfc.html
+++ b/watfordfc.html
@@ -110,7 +110,7 @@
 </head>
 	
 <body>
-	<a class="back-button" href="/projects.html"><h2>Back</h2></a>
+	<a class="back-button" href="/projects"><h2>Back</h2></a>
 	<div class="container">
 		<div class="centered-text">
 			<h1>Watford FC Rebrand</h1>
