--- a/projects.html
+++ b/projects.html
@@ -132,7 +132,7 @@
 			
 			<br>
 			<br>
-			<a href="/otherprojects.html"><p>[Other Projects]</p></a>
+			<a href="/otherprojects"><p>[Other Projects]</p></a>
 	  	</div>
 	</div>
 </body>
