--- a/otherstadiums.html
+++ b/otherstadiums.html
@@ -15,6 +15,7 @@
 	
 	<style>
 		body {
+			margin-bottom: 50px;
 			
 		}
 
@@ -291,7 +292,7 @@ and change badge opacity to 100%
 		
 <!-- Bayern Munich			 	-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style=" opacity:5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/BayernMunich.png" alt="#" >
+  		<img class="thumbnail-image" style=" opacity:100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/BayernMunich.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/Bayern.png')">
 		</div>
 
 		
