--- a/champ23-24.html
+++ b/champ23-24.html
@@ -193,6 +193,14 @@
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/QPR2.png" alt="QPR" width="333px">
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">QPR 1-2 Watford<br>Loftus Road<br>Championship</p>
 			</div>
+				
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Millwall2.png" alt="Millwall" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Milwall 1-0 Watford<br>The Den<br>Championship</p>
+			</div>
+				
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Birmingham2.png" alt="Birmingham City" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Birmingham City 0-1 Watford<br>St. Andrew's<br>Championship</p>
+			</div>
 			
 		</div>
 		
