--- a/champ23-24.html
+++ b/champ23-24.html
@@ -195,7 +195,7 @@
 			</div>
 				
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Millwall2.png" alt="Millwall" width="333px">
-				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Milwall 1-0 Watford<br>The Den<br>Championship</p>
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Millwall 1-0 Watford<br>The Den<br>Championship</p>
 			</div>
 				
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Birmingham2.png" alt="Birmingham City" width="333px">
