--- a/the92.html
+++ b/the92.html
@@ -565,7 +565,7 @@ and change badge opacity to 100%
 		</div>
 <!-- WEST BROM 				-->			
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/WestBrom.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/WestBrom.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/WestBrom.png')">
 		</div>
 <!-- WEST HAM	 			-->
 		<div class="image-container">
