--- a/the92.html
+++ b/the92.html
@@ -385,7 +385,7 @@ and change badge opacity to 100%
 		</div>
 <!-- IPSWICH				-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Ipswich.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Ipswich.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Ipswich.png')">
 		</div>
 <!-- LEEDS					-->
 		<div class="image-container">
