--- a/champ23-24.html
+++ b/champ23-24.html
@@ -205,6 +205,10 @@
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/WestBrom.png" alt="West Brom" width="333px">
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">West Bromwich Albion 2-2 Watford<br>The Hawthorns<br>Championship</p>
 			</div>
+				
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Ipswich.png" alt="Ipswich" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Ipswich 0-0 Watford<br>Portman Road<br>Championship</p>
+			</div>
 			
 			
 		</div>
