--- a/football.html
+++ b/football.html
@@ -107,6 +107,7 @@
 		  	<a href="/prem21-22"><h1>Premier League 2021/22</h1></a>
 			<a href="/champ22-23"><h1>Championship 2022/23</h1></a>
 			<a href="/champ23-24"><h1>Championship 2023/24</h1></a>
+			<a href="/champ24-25"><h1>Championship 2024/25</h1></a>
 			<br>
 			<p>Stadium Visits</p>
 			<a href="/the92"><h1>The 92 Club</h1></a>
