--- a/the92.html
+++ b/the92.html
@@ -202,7 +202,7 @@
 				<h1>The 92 Club</h1>
 			  <p>This is my progress on completing the 92.<br><span </span></p>
 				<p style="opacity: 40%; font-size: 10pt;">Click on each one to see the game and a photo from each!</p>
-				<p>[52/92]</p>
+				<p>[51/92]</p>
 			  <br>
 			</div>
 			
@@ -265,7 +265,7 @@ and change badge opacity to 100%
 		</div>
 <!-- BRADFORD 				-->			
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Bradford.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Bradford.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Bradford.png')">
 		</div>
 <!-- BRENTFORD				-->
 		<div class="image-container">
@@ -315,6 +315,10 @@ and change badge opacity to 100%
 		<div class="image-container">
   		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Cheltenham.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Cheltenham.png')">
 		</div>
+<!-- CHESTERFIELD				-->
+		<div class="image-container">
+  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Chesterfield.png" alt="#" >
+		</div>
 <!-- COLCHESTER				-->
 		<div class="image-container">
   		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Colchester.png" alt="#" >
@@ -354,10 +358,6 @@ and change badge opacity to 100%
 <!-- FLEETWOOD				-->
 		<div class="image-container">
   		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Fleetwood.png" alt="#" >
-		</div>
-<!-- FOREST GREEN			-->
-		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/ForestGreen.png" alt="#" >
 		</div>
 <!-- FULHAM 				-->			
 		<div class="image-container">
@@ -535,10 +535,6 @@ and change badge opacity to 100%
 		<div class="image-container">
   		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Sunderland.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Sunderland.png')">
 		</div>
-<!-- SUTTON					-->
-		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Sutton.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Sutton.png')">
-		</div>
 <!-- SWANSEA	 			-->
 		<div class="image-container">
   		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Swansea.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Swansea2.png')">
@@ -587,6 +583,10 @@ and change badge opacity to 100%
 		<div class="image-container">
   		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Wycombe.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Wycombe.png')">
 		</div>
+<!-- MISC 				-->			
+		<div class="image-container">
+  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Misc.png" alt="#" >
+		</div>
 
 
 
@@ -632,3 +632,9 @@ and change badge opacity to 100%
 
 
 </body></html>
+
+
+<!-- FOREST GREEN			-->
+<!--		<div class="image-container">
+  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/ForestGreen.png" alt="#" >
+		</div> -->
