--- a/the92.html
+++ b/the92.html
@@ -283,6 +283,10 @@ and change badge opacity to 100%
 		<div class="image-container">
   		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/BristolRovers.png" alt="#" >
 		</div>
+<!-- BROMLEY 				-->			
+		<div class="image-container">
+  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Bromley.png" alt="#" >
+		</div>
 <!-- BURNLEY	 			-->
 		<div class="image-container">
   		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Burnley2.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Burnley2.png')">
@@ -583,10 +587,7 @@ and change badge opacity to 100%
 		<div class="image-container">
   		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Wycombe.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Wycombe.png')">
 		</div>
-<!-- MISC 				-->			
-		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Misc.png" alt="#" >
-		</div>
+
 
 
 
