--- a/orbitproperty.html
+++ b/orbitproperty.html
@@ -138,7 +138,7 @@
 			
 			<div>
 				<h1>Orbit Property Rebrand</h1>
-				<p>This is a personal project I completed on the night of the 9th May 2021 for my dad's company, Orbit Property. I wanted to redesign the logo as I thought that the current one looked outdated. Despite this being a very quick evening project. I am so happy with how this turned out.</p>
+				<p>This is a personal project I completed on the night of the 9th May 2021 for my dad's company, Orbit Property. I wanted to redesign the logo as I thought that the current one looked outdated. Despite this being a very quick evening project, I am so happy with how this turned out.</p>
 				<br>
 			</div>
 			
