--- a/orbitproperty.html
+++ b/orbitproperty.html
@@ -14,13 +14,14 @@
 	
 	<style>
 		body {
+			background-color: black;
 			
 		}
 
 		h2, h1, p, a {
 			font-weight: 300; /* light font weight */
 			letter-spacing: 2px;
-			color: #333; /* dark grey color */
+			color: #fff; /* dark grey color */
 			font-family: 'Poppins', sans-serif;
 		}
 
