--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	<link rel="shortcut icon" type="image/png" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
-  <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
-  <meta property="og:title" content="Mikey Chapman" />
-  <meta property="og:description" content="Welcome to my portfolio!" />
+    <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
+    <meta property="og:title" content="Mikey Chapman" />
+    <meta property="og:description" content="Welcome to my portfolio!" />
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,6 +18,8 @@
 	<style>
 		body {
 			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+			position: relative;
+			overflow: hidden; /* Prevent scrollbars from showing up */
 		}
 
 		h2, h1, p, a {
@@ -73,9 +75,37 @@
 				font-size: 1em;
 			}
 			img {
-			max-width: 75%;
-			height: auto;
+				max-width: 75%;
+				height: auto;
+			}
 		}
+		
+		/* CSS for random images */
+		.image-popup {
+			position: absolute;
+			opacity: 1;
+			width: 300px; /* Set a default size for the image popups */
+			height: 300px;
+			background-size: cover;
+			background-position: center;
+			transition: opacity 0.5s ease-in-out;
+			pointer-events: none; /* Allow clicks to pass through */
+		}
+		.image1 { background-image: url('https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Homepage/KenSema/Ken1.png'); }
+		.image2 { background-image: url('https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Homepage/KenSema/Ken2.png'); }
+		.image3 { background-image: url('https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Homepage/KenSema/Ken3.png'); }
+		.image4 { background-image: url('https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Homepage/KenSema/Ken4.png'); }
+		.image5 { background-image: url('https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Homepage/KenSema/Ken5.png'); }
+		.image6 { background-image: url('https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Homepage/KenSema/Ken6.png'); }
+		.image7 { background-image: url('https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Homepage/KenSema/Ken7.png'); }
+		.image8 { background-image: url('https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Homepage/KenSema/Ken8.png'); }
+		/* Add more images as needed */
+
+		/* Hide image popups on mobile */
+		@media screen and (max-width: 768px) {
+			.image-popup {
+				display: none;
+			}
 		}
 	</style>
 </head>
@@ -90,5 +120,51 @@
 			<a href="/home"><p>[click here to enter]</p></a>
 		</div>
 	</div>
+	
+	<!-- Invisible click area -->
+	<div id="click-area" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events:none;"></div>
+
+	<!-- Random image popups -->
+	<div class="image-popup image1"></div>
+	<div class="image-popup image2"></div>
+	<div class="image-popup image3"></div>
+	<div class="image-popup image4"></div>
+	<div class="image-popup image5"></div>
+	<div class="image-popup image6"></div>
+	<div class="image-popup image7"></div>
+	<div class="image-popup image8"></div>
+	<!-- Add more image divs as needed -->
+
+	<script>
+		// JavaScript to handle click and display a random image
+		const images = document.querySelectorAll('.image-popup');
+		const clickArea = document.getElementById('click-area');
+
+		// Event listener for clicks
+		document.body.addEventListener('click', (e) => {
+			// Check if the click was on a link
+			if (e.target.tagName.toLowerCase() === 'a') {
+				return;
+			}
+
+			// Check screen width and disable feature on mobile
+			if (window.innerWidth <= 768) {
+				return;
+			}
+
+			// Get random image
+			const randomImage = images[Math.floor(Math.random() * images.length)];
+			
+			// Clone the image to allow multiple instances
+			const clone = randomImage.cloneNode(true);
+
+			// Set the position
+			clone.style.left = `${e.clientX - 50}px`; // Center the image
+			clone.style.top = `${e.clientY - 50}px`;
+			
+			// Add to the body
+			document.body.appendChild(clone);
+		});
+	</script>
 </body>
 </html>
