--- a/otherprojects.html
+++ b/otherprojects.html
@@ -103,23 +103,31 @@
 		<div class="centered-text">
 
 			
-			<a href="/posters">
+			<a href="/watfordfc">
 				<p>Project 1</p>
+				<h1>Watford FC</h1>
+		  	</a>
+			<br>
+			
+			<a href="/posters">
+				<p>Project 2</p>
 				<h1>Posters</h1>
 		  	</a>
 			<br>
 
 			<a href="/47">
-				<p>Project 2</p>
+				<p>Project 3</p>
 				<h1>'47 Brand</h1>
 		  	</a>
 			<br>
 			
 		  	<a href="/afcstaustell">
-				<p>Project 3</p>
+				<p>Project 4</p>
 				<h1>AFC St. Austell</h1>
 		  	</a>
 			<br>
+
+			
 	
 	  	</div>
 	</div>
