--- a/projects.html
+++ b/projects.html
@@ -118,9 +118,9 @@
 			
 			<br>
 			
-			<a href="/watfordfc">
+			<a href="/playergraphics">
 				<p>Project 3</p>
-				<h1>Watford FC</h1>
+				<h1>Player Graphics</h1>
 		  	</a>
 			
 			<br>
