--- a/playergraphics.html
+++ b/playergraphics.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Player Graphics</title>
+	<title>Posters</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
@@ -161,6 +161,19 @@
 			<p>Emmanuel Dennis - Watford FC&nbsp; &nbsp;</p>
 			<br>
 		</div>
+	
+	<!-- Image -->
+		
+		<div>
+	  	  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Rajovic-1.png" alt=""><br>
+		</div>
+		
+		<!-- Image Caption -->
+		
+		<div class="centered-text">
+			<p>Mileta Rajovic&nbsp; &nbsp;- Watford FC&nbsp; &nbsp;</p>
+			<br>
+  </div>
 
 		
 		
