--- a/playergraphics.html
+++ b/playergraphics.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Posters</title>
+	<title>Player Graphics</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
   	<meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
-  	<meta property="og:title" content="Posters" />
+  	<meta property="og:title" content="Player Graphics" />
   	<meta property="og:description" content="Mikey Chapman" />
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -158,7 +158,7 @@
 		<!-- Image Caption -->
 		
 		<div class="centered-text">
-			<p>Emmanuel Dennis - Watford FC&nbsp; &nbsp;</p>
+			<p>Emmanuel Dennis - Watford FC</p>
 			<br>
 		</div>
 	
@@ -171,7 +171,7 @@
 		<!-- Image Caption -->
 		
 		<div class="centered-text">
-			<p>Mileta Rajovic&nbsp; &nbsp;- Watford FC&nbsp; &nbsp;</p>
+			<p>Mileta Rajovic - Watford FC ;</p>
 			<br>
   </div>
 
