--- a/playergraphics.html
+++ b/playergraphics.html
@@ -171,7 +171,7 @@
 		<!-- Image Caption -->
 		
 		<div class="centered-text">
-			<p>Mileta Rajovic - Watford FC ;</p>
+			<p>Mileta Rajovic - Watford FC </p>
 			<br>
   </div>
 
