--- a/otherstadiums.html
+++ b/otherstadiums.html
@@ -253,9 +253,15 @@ and change badge opacity to 100%
 <!-- SLOUGH TOWN				-->
 		<div class="image-container">
   		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Slough.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Slough.png')">
+		</div>
+<!-- BARNET				-->
+		<div class="image-container">
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Barnet.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/Barnet.png')">
 		</div>	
-
-
+<!-- BERKS COUNTY				-->
+		<div class="image-container">
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Berks.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/Berks.png')">
+		</div>	
 
 
 			
