--- a/otherstadiums.html
+++ b/otherstadiums.html
@@ -308,10 +308,6 @@ and change badge opacity to 100%
   		<img class="thumbnail-image" style=" opacity:100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/BayernMunich.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/Bayern.png')">
 		</div>
 		
-<!-- Hajduk Split			 	-->
-	<!--	<div class="image-container">
-  		<img class="thumbnail-image" style=" opacity:5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Split.png" alt="#" >
-		</div> -->
 
 		
 		
@@ -319,6 +315,8 @@ and change badge opacity to 100%
 </div>
 		
 <div class="centered-text">
+	
+            
 			
 			
 			
@@ -328,14 +326,20 @@ and change badge opacity to 100%
 				<br>
 		  </div>
 			
-		</div>
+		<div class="image-row" style="padding-bottom: 50px;">
 		
 <!-- Boston Celtics		 	-->
 		<div class="image-container">
   		<img class="thumbnail-image" style=" opacity:100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/BostonCeltics.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/BostonCeltics.png')">
 		</div>
+		
+<!-- New York Yankees		 	-->
+		<!--<div class="image-container">
+  		<img class="thumbnail-image" style=" opacity:100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Yankees.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/Yankees.png')">
+		</div>-->
 
 		
+		</div>
 
 <!-- DO NOT TOUCH!!!!!! -->
 			
