--- a/champ24-25.html
+++ b/champ24-25.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Championship 20234/25</title>
+	<title>Championship 2024/25</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
@@ -162,7 +162,7 @@
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Borehamwood 0-1 Watford<br>Meadow Park<br>Pre-Season</p>
 			</div>
 				
-			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/SheffUtd2.png" alt="Stevenage" width="333px">
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/SheffUtd2.png" alt="Sheffield United" width="333px">
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Sheffield United 1-0 Watford<br>
 				  Bramall Lane<br>
 			    Championship</p>
