--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div><a href="/playergraphics"></a>player graphics</a></div>
         <div><a href="/watfordfc"></a>watford fc</a></div>
         <div><a href="/posters"></a>posters</a></div>
-        <div><a href="/47"></a>'47 brand'</a></div>
+        <div><a href="/47"></a>'47 brand</a></div>
         <div><a href="/afcstaustell"></a>afc st. austell</a></div>
         <div>liverpool fc [coming soon]</div>
     </div>
