--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
     <div class="title">mikeychapman_!</div>
     <div class="menu-item" onclick="toggleDropdown('dropdown1')">projects</div>
     <div id="dropdown1" class="dropdown">
-        <div><a href="/sportcheck"></a>sport check</a></div>
-        <div><a href="/thetoastclub"></a>toast club</a></div>
-        <div><a href="/orbitproperty"></a>orbit property</a></div>
-        <div><a href="/playergraphics"></a>player graphics</a></div>
-        <div><a href="/watfordfc"></a>watford fc</a></div>
-        <div><a href="/posters"></a>posters</a></div>
-        <div><a href="/47"></a>'47 brand</a></div>
-        <div><a href="/afcstaustell"></a>afc st. austell</a></div>
+        <div><a href="/sportcheck">sport check</a></div>
+        <div><a href="/thetoastclub">toast club</a></div>
+        <div><a href="/orbitproperty">orbit property</a></div>
+        <div><a href="/playergraphics">player graphics</a></div>
+        <div><a href="/watfordfc">watford fc</a></div>
+        <div><a href="/posters">posters</a></div>
+        <div><a href="/47">'47 brand</a></div>
+        <div><a href="/afcstaustell">afc st. austell</a></div>
         <div>liverpool fc [coming soon]</div>
     </div>
     
