--- a/47.html
+++ b/47.html
@@ -130,7 +130,7 @@
 <body>
 	
 	
-	<a class="back-button" href="/otherprojects"><h2>Back</h2></a>
+	<a class="back-button" href="/"><h2>Back</h2></a>
 	
 	
 	<div class="container">
