--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
 </head>
 	
 <body>
-	<a class="back-button" href="/home"><h2>Back</h2></a>
+	<a class="back-button" href="/"><h2>Back</h2></a>
 	<div class="container">
 		<div class="centered-text">
 			
