--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
 </head>
 	
 <body>
-	<a class="back-button" href="/home"><h2>Back</h2></a>
+	<a class="back-button" href="/"><h2>Back</h2></a>
 	<div class="container">
 		<div class="centered-text">
 		  	<a href="https://x.com/MikeyJC_" target="_blank"><h1>X</h1>
