--- a/otherstadiums.html
+++ b/otherstadiums.html
@@ -191,7 +191,7 @@
 <body cz-shortcut-listen="true">
 	
 	
-	<a class="back-button" href="/football"><h2>Back</h2></a>
+	<a class="back-button" href="/"><h2>Back</h2></a>
 	
 	
 	<div class="container">
