--- a/playergraphics.html
+++ b/playergraphics.html
@@ -132,7 +132,7 @@
 <body>
 	
 	
-	<a class="back-button" href="/home"><h2>Back</h2></a>
+	<a class="back-button" href="/"><h2>Back</h2></a>
 	
 	
 <div class="container">
