--- a/prem21-22.html
+++ b/prem21-22.html
@@ -146,7 +146,7 @@
 </head>
 	
 <body>
-	<a class="back-button" href="/football"><h2>Back</h2></a>
+	<a class="back-button" href="/"><h2>Back</h2></a>
 	
 	<div class="container">
 		<div class="centered-text">
