--- a/sportcheck.html
+++ b/sportcheck.html
@@ -153,7 +153,7 @@
 <body>
 	
 	
-	<a class="back-button" href="/projects"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/Redesign/BackButton.svg" alt="" style=" margin-top: 40px; margin-left: 30px;"></a>
+	<a class="back-button" href="/"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/Redesign/BackButton.svg" alt="" style=" margin-top: 40px; margin-left: 30px;"></a>
 	
 	
 	<div class="container">
