--- a/the92.html
+++ b/the92.html
@@ -201,8 +201,8 @@
 			<div>
 				<h1>The 92 Club</h1>
 			  <p>This is my progress on completing the 92.<br><span </span></p>
-				<p style="opacity: 40%; font-size: 10pt;">Click on each one to see the game and a photo from each!</p>
-				<p>[51/92]</p>
+			  <p style="opacity: 40%; font-size: 10pt;">Click on each one to see the game and a photo from each!</p>
+				<p>[52/92]</p>
 			  <br>
 			</div>
 			
@@ -409,7 +409,7 @@ and change badge opacity to 100%
 		</div>
 <!-- LIVERPOOL				-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Liverpool2.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Liverpool2.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Liverpool.png')">
 		</div>
 <!-- L*TON	 				-->
 		<div class="image-container">
