--- a/the92.html
+++ b/the92.html
@@ -513,7 +513,7 @@ and change badge opacity to 100%
 		</div>
 <!-- SHEFFIELD WEDNESDAY	-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/SheffieldWed.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/SheffieldWed.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/SheffieldWed.png')">
 		</div>
 <!-- SHREWSBURY 			-->			
 		<div class="image-container">
