--- a/the92.html
+++ b/the92.html
@@ -202,7 +202,7 @@
 				<h1>The 92 Club</h1>
 			  <p>This is my progress on completing the 92.<br><span </span></p>
 			  <p style="opacity: 40%; font-size: 10pt;">Click on each one to see the game and a photo from each!</p>
-				<p>[53/92]</p>
+				<p>[54/92]</p>
 			  <br>
 			</div>
 			
@@ -337,7 +337,7 @@ and change badge opacity to 100%
 		</div>
 <!-- CREWE					-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Crewe.png" alt="#">
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Crewe.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Crewe.png')">
 		</div>
 <!-- CRYSTAL PALACE 		-->
 		<div class="image-container">
