--- a/the92.html
+++ b/the92.html
@@ -517,7 +517,7 @@ and change badge opacity to 100%
 		</div>
 <!-- SHREWSBURY 			-->			
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Shrewsbury.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Shrewsbury.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Shrewsbury.png')">
 		</div>
 <!-- SOUTHAMPTON 			-->
 		<div class="image-container">
