--- a/champ24-25.html
+++ b/champ24-25.html
@@ -186,10 +186,16 @@
 			    Championship</p>
 			</div>
 				
-			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Cardiff City" width="333px">
-				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Cardiff City 0-0 Watford<br>
-				Cardiff City Stadium<br>
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Queens Park Rangers" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">QPR 0-0 Watford<br>
+				Loftus Road<br>
 			    Championship</p>
+			</div>
+
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Fulham" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Fulham 0-0 Watford<br>
+				Craven Cottage<br>
+			    FA Cup</p>
 			</div>
 				
 			
