--- a/champ24-25.html
+++ b/champ24-25.html
@@ -6,7 +6,7 @@
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
   <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
-  <meta property="og:title" content="Championship 2023/24 Away Days" />
+  <meta property="og:title" content="Championship 2024/25 Away Days" />
   <meta property="og:description" content="Mikey Chapman" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -196,6 +196,12 @@
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Fulham 0-0 Watford<br>
 				Craven Cottage<br>
 			    FA Cup</p>
+			</div>
+				
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Fulham" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Cardiff City 0-0 Watford<br>
+				Cardiff City Stadium<br>
+			    Championship</p>
 			</div>
 				
 			
