--- a/champ24-25.html
+++ b/champ24-25.html
@@ -198,7 +198,7 @@
 			    FA Cup</p>
 			</div>
 				
-			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Fulham" width="333px">
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Cardiff City" width="333px">
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Cardiff City 0-0 Watford<br>
 				Cardiff City Stadium<br>
 			    Championship</p>
