--- a/the92.html
+++ b/the92.html
@@ -301,7 +301,7 @@ and change badge opacity to 100%
 		</div>
 <!-- CARDIFF				-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Cardiff.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Cardiff.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Cardiff.png')">
 		</div>
 <!-- CARLISLE				-->
 		<div class="image-container">
