--- a/the92.html
+++ b/the92.html
@@ -345,7 +345,7 @@ and change badge opacity to 100%
 		</div>
 <!-- DERBY	 				-->			
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Derby.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Derby.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Derby.png')">
 		</div>
 <!-- DONCASTER				-->
 		<div class="image-container">
