--- a/playergraphics.html
+++ b/playergraphics.html
@@ -148,7 +148,22 @@
 			
 		</div>
 
-		<!-- Image -->
+	<!-- Image -->
+		
+		<div>
+		  	<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Bayo-1.png" alt=""><br>
+			
+		</div>
+		
+		<!-- Image Caption -->
+		
+		<div class="centered-text">
+			<p>Vakoun Bayo - Watford FC</p>
+			<br>
+		</div>	
+	
+	
+	<!-- Image -->
 		
 		<div>
 		  	<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Dennis-P-1.png" alt=""><br>
