--- a/playergraphics.html
+++ b/playergraphics.html
@@ -147,6 +147,34 @@
 		  </div>
 			
 		</div>
+	
+	<!-- Image -->
+		
+		<div>
+		  	<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Wiley-1.png" alt=""><br>
+			
+		</div>
+		
+		<!-- Image Caption -->
+		
+		<div class="centered-text">
+			<p>Caleb Wiley - Watford FC</p>
+			<br>
+		</div>	
+	
+	<!-- Image -->
+		
+		<div>
+		  	<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Chak-1.png" alt=""><br>
+			
+		</div>
+		
+		<!-- Image Caption -->
+		
+		<div class="centered-text">
+			<p>Giorgi Chakvetadze - Georgia National Team</p>
+			<br>
+		</div>	
 
 	<!-- Image -->
 		
