--- a/playergraphics.html
+++ b/playergraphics.html
@@ -151,6 +151,19 @@
 	<!-- Image -->
 		
 		<div>
+	  	  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Bassey.png" alt=""><br>
+		</div>
+		
+		<!-- Image Caption -->
+		
+		<div class="centered-text">
+			<p>Calvin Bassey - Fulham FC </p>
+			<br>
+  </div>
+	
+	<!-- Image -->
+		
+		<div>
 		  	<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Wiley-1.png" alt=""><br>
 			
 		</div>
@@ -205,18 +218,7 @@
 			<br>
 		</div>
 	
-	<!-- Image -->
-		
-		<div>
-	  	  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Rajovic-1.png" alt=""><br>
-		</div>
-		
-		<!-- Image Caption -->
-		
-		<div class="centered-text">
-			<p>Mileta Rajovic - Watford FC </p>
-			<br>
-  </div>
+	
 
 		
 		
