--- a/playergraphics.html
+++ b/playergraphics.html
@@ -14,17 +14,21 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500&display=swap" rel="stylesheet">
 	
 	<style>
-		
 		body {
-			
-			
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+			font-family: 'Poppins', sans-serif;
+		}
+		
+		.back-button {
+			text-align: left;
 		}
 
 		h3, h2, h1, p, a {
-			font-weight: 300; /* light font weight */
+			font-weight: 300;
 			letter-spacing: 2px;
-			color: #333; /* dark grey color */
-			font-family: 'Poppins', sans-serif;
+			color: #333;
 		}
 
 		h1 {
@@ -34,29 +38,10 @@
 		
 		h2 {
 			font-size: 1em;
-			text-align: left;
-			margin-top: 50px;
-			margin-left: 50px;
-			margin-bottom: -50px;
+			margin: 50px;
 			cursor: pointer;
 		}
-		
-		h3 {
-			font-size: 1.2em;
-			text-align: center;
-		}
 
-		p {
-			font-size: 1em;
-			line-height: 1.5;
-			text-align: center;
-		}
-
-		h1 strong, p strong {
-			font-weight: 500; /* regular font weight */
-			color: #000; /* black color */
-		}
-		
 		a {
 			text-decoration: none;
 		}
@@ -65,169 +50,134 @@
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			height: 100vh;
-			margin-top: 100px;
-			
+			margin-top: 50px;
 		}
 		
 		.centered-text {
 			text-align: center;
 			max-width: 65%;
 		}
-		
-		img {
-			max-width: 750px;
-			height: auto;
+
+		/* Grid Layout for Images */
+		.image-grid {
+			display: grid;
+			grid-template-columns: repeat(3, 1fr);
+			gap: 15px;
+			padding: 20px;
+			max-width: 1000px;
+			padding-bottom: 50px;
 		}
-		
-		video {
-			max-width: 750px;
-			height: auto;
+
+		.image-grid img {
+			width: 100%; 
+			height: 100%; 
+			aspect-ratio: 1 / 1; /* Force square aspect ratio */
+			object-fit: cover;
+			cursor: pointer;
+			transition: transform 0.2s ease-in-out;
 		}
-		
-		.back-button {
-			text-align: left;
+
+		.image-grid img:hover {
+			transform: scale(1.02);
 		}
-		
+
+		/* Modal for Enlarged Image */
+		.modal {
+			display: none;
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-color: rgba(0, 0, 0, 0.8);
+			z-index: 1000;
+			align-items: center;
+			justify-content: center;
+		}
+
+		.modal-content {
+			max-width: 80%;
+			max-height: 80%;
+		}
+
+		.close-button {
+			position: absolute;
+			top: 20px;
+			right: 20px;
+			color: #fff;
+			font-size: 2em;
+			cursor: pointer;
+			z-index: 1001;
+			transition: 0.2s;
+		}
+
+		.close-button:hover {
+			transform: scale(1);
+		}
+
 		@media screen and (max-width: 768px) {
 			h1 {
 				font-size: 1.2em;
 			}
-			
-			p {
-				font-size: 1em;
-			}
-			h2 {
-				font-size: 1em;
-				text-align: left;
-				margin-top: 50px;
-				margin-left: 20px;
-				margin-bottom: -20px;
-			}
-			img {
-				max-width: 100%;
-				height: auto;
-			}
-			
-			video {
-				max-width: 100%;
-				height: auto;
-			}
-			
-			.centered-text {
-				text-align: center;
-				max-width: 80%;
-			}
-			.container {
-				display: flex;
-				flex-direction: column;
-				align-items: center;
-				height: 100vh;
-				margin-top: 50px;
+
+			.image-grid {
+				grid-template-columns: repeat(2, 1fr);
 			}
 		}
 	</style>
 </head>
 	
 <body>
-	
-	
 	<a class="back-button" href="/"><h2>Back</h2></a>
 	
-	
-<div class="container">
+	<div class="container">
 		<div class="centered-text">
-			
-			
-			
-			<div>
-			  <h1>Player Graphics</h1>
-				<p>This is a collection of graphics that I have created of football players.</p>
-				<br>
-		  </div>
-			
-		</div>
-	
-	<!-- Image -->
-		
-		<div>
-	  	  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Bassey.png" alt=""><br>
-		</div>
-		
-		<!-- Image Caption -->
-		
-		<div class="centered-text">
-			<p>Calvin Bassey - Fulham FC </p>
-			<br>
-  </div>
-	
-	<!-- Image -->
-		
-		<div>
-		  	<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Wiley-1.png" alt=""><br>
-			
-		</div>
-		
-		<!-- Image Caption -->
-		
-		<div class="centered-text">
-			<p>Caleb Wiley - Watford FC</p>
-			<br>
-		</div>	
-	
-	<!-- Image -->
-		
-		<div>
-		  	<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Chak-1.png" alt=""><br>
-			
-		</div>
-		
-		<!-- Image Caption -->
-		
-		<div class="centered-text">
-			<p>Giorgi Chakvetadze - Georgia National Team</p>
-			<br>
-		</div>	
-
-	<!-- Image -->
-		
-		<div>
-		  	<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Bayo-1.png" alt=""><br>
-			
-		</div>
-		
-		<!-- Image Caption -->
-		
-		<div class="centered-text">
-			<p>Vakoun Bayo - Watford FC</p>
-			<br>
-		</div>	
-	
-	
-	<!-- Image -->
-		
-		<div>
-		  	<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Dennis-P-1.png" alt=""><br>
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Dennis-P-2.png" alt="">
-		</div>
-		
-		<!-- Image Caption -->
-		
-		<div class="centered-text">
-			<p>Emmanuel Dennis - Watford FC</p>
+			<h1>Player Graphics</h1>
+			<p>This is a collection of graphics that I have created of football players.</p>
 			<br>
 		</div>
-	
-	
-
 		
-		
-		
-		
-		
-		
+		<!-- Image Grid -->
+		<div class="image-grid">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Louza-1.png" alt="Imran Louza" onclick="openModal(this.src)">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-GibbsWhite-1.png" alt="Morgan Gibbs-White" onclick="openModal(this.src)">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Bassey.png" alt="Calvin Bassey" onclick="openModal(this.src)">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Wiley-1.png" alt="Caleb Wiley" onclick="openModal(this.src)">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Chak-1.png" alt="Giorgi Chakvetadze" onclick="openModal(this.src)">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Bayo-1.png" alt="Vakoun Bayo" onclick="openModal(this.src)">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Dennis-P-1.png" alt="Emmanuel Dennis" onclick="openModal(this.src)">
+			
+		</div>
 	</div>
-		  	
-</body>
+	
+	<!-- Modal Overlay -->
+	<div id="modal" class="modal">
+		<span class="close-button" onclick="closeModal()">&times;</span>
+		<img class="modal-content" id="modal-img">
+	</div>
 
+	<script>
+		// Open Modal
+		function openModal(src) {
+			const modal = document.getElementById('modal');
+			const modalImg = document.getElementById('modal-img');
+			modal.style.display = 'flex';
+			modalImg.src = src;
+		}
+
+		// Close Modal
+		function closeModal() {
+			const modal = document.getElementById('modal');
+			modal.style.display = 'none';
+		}
+		
+		// Close modal on click outside of image
+		window.onclick = function(event) {
+			const modal = document.getElementById('modal');
+			if (event.target === modal) {
+				closeModal();
+			}
+		};
+	</script>
+</body>
 </html>
