--- a/the92.html
+++ b/the92.html
@@ -469,7 +469,7 @@ and change badge opacity to 100%
 		</div>
 <!-- OXFORD					-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Oxford.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Oxford.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Oxford.png')">
 		</div>
 <!-- PETERBOROUGH 			-->			
 		<div class="image-container">
