--- a/posters.html
+++ b/posters.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Travel Posters</title>
+	<title>Posters</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
   	<meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
-  	<meta property="og:title" content="Travel Posters" />
+  	<meta property="og:title" content="Posters" />
   	<meta property="og:description" content="Mikey Chapman" />
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
