--- a/posters.html
+++ b/posters.html
@@ -132,14 +132,14 @@
 	
 	<div class="container">
 		<div class="centered-text">
-			<h1>Travel Posters</h1>
-			<p>This is a collection of posters that I have created using my portable scanner to take images from different towns &amp; cities.</p>
+			<h1>Posters</h1>
+			<p>This is a collection of posters that I have created using my portable scanner to take images from different places.</p>
 			<br>
 	  </div>
 		
 		<!-- Image Grid -->
 		<div class="image-grid">
-		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Watford_12.03.25-P.png" alt="Watford" onclick="openModal(this.src)">
+		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Watford_2025-P.png" alt="Watford" onclick="openModal(this.src)">
 		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Porto_2025-P.png" alt="Porto" onclick="openModal(this.src)">
 		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Braga_2025-P.png" alt="Braga" onclick="openModal(this.src)">
 			
