--- a/posters.html
+++ b/posters.html
@@ -140,8 +140,10 @@
 		<!-- Image Grid -->
 		<div class="image-grid">
 		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Watford_2025-P.png" alt="Watford" onclick="openModal(this.src)">
+		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Lille_2025-P.png" alt="Lille" onclick="openModal(this.src)">
 		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Porto_2025-P.png" alt="Porto" onclick="openModal(this.src)">
 		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Braga_2025-P.png" alt="Braga" onclick="openModal(this.src)">
+		  
 			
 		</div>
 	</div>
