--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
             flex-direction: column;
             justify-content: center; /* Aligns text vertically with image */
             height: 100%; /* Ensures same height as image container */
-			margin-top: 0px;
+			margin-top: -16px;
         }
 
         .back-button {
@@ -118,6 +118,11 @@
 			p {
 				text-align: center;
 			}
+			.container {
+        		margin-top: 100px;
+            	max-width: 95%;
+				margin-bottom: 100px;
+        }
         }
     </style>
 </head>
