--- a/posters.html
+++ b/posters.html
@@ -143,6 +143,7 @@
 		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Lille_2025-P.png" alt="Lille" onclick="openModal(this.src)">
 		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Porto_2025-P.png" alt="Porto" onclick="openModal(this.src)">
 		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Braga_2025-P.png" alt="Braga" onclick="openModal(this.src)">
+		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Hamburg_2025-P.png" alt="Hamburg" onclick="openModal(this.src)">
 		  
 			
 		</div>
