--- a/champ24-25.html
+++ b/champ24-25.html
@@ -215,6 +215,12 @@
 				Kassam Stadium<br>
 			    Championship</p>
 			</div>
+
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Portsmouth" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Portsmouth 0-0 Watford<br>
+				Portman Road<br>
+			    Championship</p>
+			</div>
 				
 			
 			
