--- a/champ24-25.html
+++ b/champ24-25.html
@@ -218,7 +218,7 @@
 
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Portsmouth" width="333px">
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Portsmouth 0-0 Watford<br>
-				Portman Road<br>
+				Fratton Park<br>
 			    Championship</p>
 			</div>
 				
