--- a/the92.html
+++ b/the92.html
@@ -485,7 +485,7 @@ and change badge opacity to 100%
 		</div>
 <!-- PORTSMOUTH				-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Portsmouth.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Portsmouth.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Portsmouth.png')">
 		</div>
 <!-- PRESTON			 	-->
 		<div class="image-container">
