--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                 <div><a href="champ22-23">championship 2022/23</a></div>
                 <div><a href="champ23-24">championship 2023/24</a></div>
                 <div><a href="champ24-25">championship 2024/25</a></div>
+                <div><a href="champ25-26">championship 2025/26</a></div>
             </div>
             <div><a href="/the92">the 92</a></div>
             <div><a href="/otherstadiums">other stadiums</a></div>
