--- a/the92.html
+++ b/the92.html
@@ -587,6 +587,10 @@ and change badge opacity to 100%
 		<div class="image-container">
   		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Wycombe.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Wycombe.png')">
 		</div>
+<!-- MISC -->		
+		<div class="image-container">
+  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Misc.png" alt="#" >
+		</div>
 
 
 
@@ -635,7 +639,19 @@ and change badge opacity to 100%
 </body></html>
 
 
+<!-- MISC			-->
+<!--		<div class="image-container">
+  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Misc.png" alt="#" >
+		</div> -->
+
+
 <!-- FOREST GREEN			-->
 <!--		<div class="image-container">
   		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/ForestGreen.png" alt="#" >
 		</div> -->
+<!-- MORECAMBE				-->
+<!--		<div class="image-container">
+  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Morecambe.png" alt="#" >
+		</div> -->
+
+
