--- a/otherstadiums.html
+++ b/otherstadiums.html
@@ -254,10 +254,6 @@ and change badge opacity to 100%
 		<div class="image-container">
   		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Slough.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Slough.png')">
 		</div>
-<!-- BARNET				-->
-		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Barnet.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/Barnet.png')">
-		</div>	
 <!-- BERKS COUNTY				-->
 		<div class="image-container">
   		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Berks.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/Berks.png')">
@@ -265,7 +261,11 @@ and change badge opacity to 100%
 <!-- CHESHAM				-->
 		<div class="image-container">
   		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Chesham.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/Chesham.png')">
-		</div>	
+		</div>
+<!-- CARLISLE				-->
+		<div class="image-container">
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Carlisle.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Carlisle.png')">
+		</div>
 
 			
 	
